--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,14 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
-        {
-            "name": ".NET Core Launch (web)",
+       {
+           "name": ".NET Core Attach",
+           "type": "coreclr",
+           "request": "attach",
+           "processId": "${command:pickProcess}"
+       },
+       {
+            "name": ".NET Core Launch (Web)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -13,6 +19,28 @@
             "program": "${workspaceFolder}/Presentation/InteliSystem.VejaBem.Presentation/bin/Debug/netcoreapp3.1/InteliSystem.VejaBem.Presentation.dll",
             "args": [],
             "cwd": "${workspaceFolder}/Presentation/InteliSystem.VejaBem.Presentation",
+            "stopAtEntry": false,
+            // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
+            "name": ".NET Core Launch (Api)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/Presentation/InteliSystem.VejaBem.Api/bin/Debug/netcoreapp3.1/InteliSystem.VejaBem.Api.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/Presentation/InteliSystem.VejaBem.Api",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
