--- a/Presentation/InteliSystem.VejaBem.Api/InteliSystem.VejaBem.Api.csproj
+++ b/Presentation/InteliSystem.VejaBem.Api/InteliSystem.VejaBem.Api.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Autofac" Version="5.2.0" />
     <PackageReference Include="Autofac.Configuration" Version="5.1.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="DotNetZip" Version="1.13.8" />
   </ItemGroup>
 
   <ItemGroup>
