Rename src to Src and  Create File VejaBemCode.sln

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -58,7 +58,9 @@
                 "publish",
                 "${workspaceFolder}/Presentation/InteliSystem.VejaBem.Api/InteliSystem.VejaBem.Api.csproj",
                 "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "/consoleloggerparameters:NoSummary",
+                "/p:DeployOnBuild=true",
+                "/p:PublishProfile=Test"
             ],
             "problemMatcher": "$msCompile"
         },
