--- a/Presentation/InteliSystem.VejaBem.Presentation/InteliSystem.VejaBem.Presentation.csproj
+++ b/Presentation/InteliSystem.VejaBem.Presentation/InteliSystem.VejaBem.Presentation.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Infra\InteliSystem.DbConnection\InteliSystem.DbConnection.csproj" />
-    <ProjectReference Include="..\..\src\Infra\InteliSystem.Infra.CrossCuttinInitialize\InteliSystem.Infra.CrossCuttinInitialize.csproj" />
-    <ProjectReference Include="..\..\src\Util\InteliSystem.Util\InteliSystem.Util.csproj" />
-    <ProjectReference Include="..\..\src\Application\General\InteliSystem.App.General.Enderecos\InteliSystem.App.General.Enderecos.csproj" />
-    <ProjectReference Include="..\..\src\Application\General\InteliSystem.App.General.Pessoas\InteliSystem.App.General.Pessoas.csproj" />
+    <ProjectReference Include="..\..\Src\Infra\InteliSystem.DbConnection\InteliSystem.DbConnection.csproj" />
+    <ProjectReference Include="..\..\Src\Infra\InteliSystem.Infra.CrossCuttinInitialize\InteliSystem.Infra.CrossCuttinInitialize.csproj" />
+    <ProjectReference Include="..\..\Src\Util\InteliSystem.Util\InteliSystem.Util.csproj" />
+    <ProjectReference Include="..\..\Src\Application\General\InteliSystem.App.General.Enderecos\InteliSystem.App.General.Enderecos.csproj" />
+    <ProjectReference Include="..\..\Src\Application\General\InteliSystem.App.General.Pessoas\InteliSystem.App.General.Pessoas.csproj" />
   </ItemGroup>
 
   <ItemGroup>
