--- a/src/Infra/InteliSystem.Infra.CrossCuttinInitialize/InteliSystem.Infra.CrossCuttinInitialize.csproj
+++ b/src/Infra/InteliSystem.Infra.CrossCuttinInitialize/InteliSystem.Infra.CrossCuttinInitialize.csproj
@@ -13,6 +13,8 @@
     <ProjectReference Include="..\..\Application\Management\InteliSystem.App.Management.Pessoas\InteliSystem.App.Management.Pessoas.csproj" />
     <ProjectReference Include="..\..\Application\Management\InteliSystem.App.Management.Enderecos\InteliSystem.App.Management.Enderecos.csproj" />
     <ProjectReference Include="..\..\Application\Management\InteliSystem.App.Management.Usuarios\InteliSystem.App.Management.Usuarios.csproj" />
+    <ProjectReference Include="..\..\Application\Management\InteliSystem.App.Management.Logins\InteliSystem.App.Management.Logins.csproj" />
+    <ProjectReference Include="..\..\Application\Management\InteliSystem.App.Management.Secoes\InteliSystem.App.Management.Secoes.csproj" />
   </ItemGroup>
 
 </Project>
