--- a/src/Infra/Repositorios/Gestao/InteliSystem.Repositorio.Gestao.Usuarios/InteliSystem.Repositorio.Gestao.Usuarios.csproj
+++ b/src/Infra/Repositorios/Gestao/InteliSystem.Repositorio.Gestao.Usuarios/InteliSystem.Repositorio.Gestao.Usuarios.csproj
@@ -3,7 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Dominio\Gestao\InteliSystem.Dominio.Gestao.Usuarios\InteliSystem.Dominio.Gestao.Usuarios.csproj" />
     <ProjectReference Include="..\..\..\InteliSystem.DbConnection\InteliSystem.DbConnection.csproj" />
-    <ProjectReference Include="..\..\..\..\Util\InteliSystem.Shareds\InteliSystem.Shareds.csproj" />
+    <ProjectReference Include="..\..\..\..\Util\InteliSystem.Compartilhados\InteliSystem.Compartilhados.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
